src/objects/Lead_Gen_Dashboard__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Lead Gen Dashboards</relationshipLabel>
        <relationshipName>Lead_Gen_Dashboards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amex_Clicks_to_Landing_Page__c</fullName>
        <label>Amex Clicks to Landing Page</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Revised__c</fullName>
        <label>Monthly Budget (Revised)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LZ_Order_Volume__c</fullName>
        <label>LZ Order Volume</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_Year__c</fullName>
        <label>Month-Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jan-2011</fullName>
                </value>
                <value>
                    <fullName>Feb-2011</fullName>
                </value>
                <value>
                    <fullName>Mar-2011</fullName>
                </value>
                <value>
                    <fullName>Apr-2011</fullName>
                </value>
                <value>
                    <fullName>May-2011</fullName>
                </value>
                <value>
                    <fullName>Jun-2011</fullName>
                </value>
                <value>
                    <fullName>Jul-2011</fullName>
                </value>
                <value>
                    <fullName>Aug-2011</fullName>
                </value>
                <value>
                    <fullName>Sep-2011</fullName>
                </value>
                <value>
                    <fullName>Oct-2011</fullName>
                </value>
                <value>
                    <fullName>Nov-2011</fullName>
                </value>
                <value>
                    <fullName>Dec-2011</fullName>
                </value>
                <value>
                    <fullName>Jan-2012</fullName>
                </value>
                <value>
                    <fullName>Feb-2012</fullName>
                </value>
                <value>
                    <fullName>Mar-2012</fullName>
                </value>
                <value>
                    <fullName>Apr-2012</fullName>
                </value>
                <value>
                    <fullName>May-2012</fullName>
                </value>
                <value>
                    <fullName>Jun-2012</fullName>
                </value>
                <value>
                    <fullName>Jul-2012</fullName>
                </value>
                <value>
                    <fullName>Aug-2012</fullName>
                </value>
                <value>
                    <fullName>Sep-2012</fullName>
                </value>
                <value>
                    <fullName>Oct-2012</fullName>
                </value>
                <value>
                    <fullName>Nov-2012</fullName>
                </value>
                <value>
                    <fullName>Dec-2012</fullName>
                </value>
                <value>
                    <fullName>Jan-2013</fullName>
                </value>
                <value>
                    <fullName>Feb-2013</fullName>
                </value>
                <value>
                    <fullName>Mar-2013</fullName>
                </value>
                <value>
                    <fullName>Apr-2013</fullName>
                </value>
                <value>
                    <fullName>May-2013</fullName>
                </value>
                <value>
                    <fullName>Jun-2013</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monthly_Budget__c</fullName>
        <label>Monthly Budget</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Revenue__c</fullName>
        <label>Monthly Revenue</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Lead Gen Dashboards</relationshipLabel>
        <relationshipName>Lead_Gen_Dashboards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percentage_to_Budget__c</fullName>
        <formula>Monthly_Revenue__c / Monthly_Budget__c</formula>
        <label>Percentage to Budget</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Opt_in_s__c</fullName>
        <label>Monthly Total Opt-in&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Variance__c</fullName>
        <formula>Monthly_Revenue__c - Monthly_Budget__c</formula>
        <label>Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Lead Gen Dashboard</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>LZ_Order_Volume__c</columns>
        <columns>Month_Year__c</columns>
        <columns>Monthly_Budget__c</columns>
        <columns>Total_Opt_in_s__c</columns>
        <columns>Monthly_Revenue__c</columns>
        <columns>Year__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LG-{0000}</displayFormat>
        <label>Lead Gen Dashboard</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Gen Dashboards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>